# uptime-monitor

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  celery_beat.py  celery_worker.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: monitors.py  pings.py  users.py
backend/app/core/: config.py  logging.py  rate_limiter.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  monitor.py  ping_log.py  user.py
backend/app/schemas/: monitor.py  ping_log.py  user.py
backend/app/services/: alert_service.py  monitor_service.py  ping_service.py
backend/app/tasks/: alerts.py  ping.py  scheduler.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_v1.py  test_health.py  test_monitors.py  test_monitors_api.py  test_ping_flow.py  test_pings_api.py  test_users_api.py
backend/tests/mocks/: test_celery_tasks.py
backend/tests/unit/: test_alert_service.py  test_alerts.py  test_alerts_task.py  test_base.py  test_config.py  test_deps.py  test_init_db.py  test_logging.py  test_main.py  test_monitor_service.py  test_ping_service.py  test_ping_task.py  test_rate_limiter.py  test_scheduler.py  test_schemas.py  test_security.py  test_session.py
backend/uptime_monitor_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  monitors.test.ts  monitors.ts  pings.test.ts  pings.ts  users.test.ts  users.ts
frontend/src/hooks/: useAuth.test.tsx  useAuth.ts  useMonitors.test.tsx  useMonitors.ts  usePings.test.tsx  usePings.ts
frontend/src/pages/: Dashboard.test.tsx  Dashboard.tsx  Login.test.tsx  Login.tsx  MonitorDetail.test.tsx  MonitorDetail.tsx  Settings.test.tsx  Settings.tsx
frontend/src/stores/: authStore.test.ts  authStore.ts  monitorStore.test.ts  monitorStore.ts
(+27 files in other folders)
