[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uptime-monitor-api"
version = "0.1.0"
description = "Backend API for URL uptime monitoring"
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    
    # Validation & Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    
    # Database & ORM
    "sqlalchemy[asyncpg]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",  # Sync driver for Celery workers
    "alembic>=1.13.0",
    
    # Background Jobs
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    
    # HTTP Client (workers ping URLs with this)
    "httpx>=0.27.0",
    
    # Auth / JWT (Supabase token validation)
    "python-jose[cryptography]>=3.3.0",
    
    # Supabase client (optional but useful for auth helpers)
    "supabase>=2.4.0",

    "slowapi>=0.1.9",
    "limits[redis]>=3.8.0",
]

[project.optional-dependencies]
dev = [
    # Testing (#11)
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=24.0.0",
    "httpx>=0.27.0",  # FastAPI TestClient needs this
    "aiosqlite>=0.20.0",
    
    # Linting / Formatting
    "ruff>=0.3.0",
    "black>=24.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*", "alembic*"]

# pytest configuration (#11)
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring database",
]

# Ruff linting (replaces flake8 + isort)
[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

# Black formatting
[tool.black]
line-length = 100
target-version = ["py311"]

# Coverage reporting
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*", "*/__init__.py"]